WIP user addon
